[package]
name = "lwltk"
version = "0.1.0"
authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.15", default-features = false, features = ["png"] }
compact_str = { version = "0.7", default-features = false }
gapbuf = "0.1.4"
memmap2 = "0.5"
nix = "0.24.1"
tempfile = "3.5"
wayland-client = { version = "0.29", features = ["use_system_lib"] }
wayland-cursor = "0.29"
xkbcommon = { version = "0.5", features = ["wayland"] }
