[package]
name = "lwltk"
version = "0.1.0"
authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.15", default-features = false, features = ["png"] }
compact_str = "0.7"
gapbuf = "0.1.4"
memmap2 = "0.5"
nix = "0.24.1"
tempfile = "3.5"
wayland-client = "0.29"
wayland-cursor = "0.29"
xkbcommon = { version = "0.5", features = ["wayland"] }

[features]
default = ["use_system_lib"]
use_system_lib = ["wayland-client/use_system_lib"]
dlopen = ["wayland-client/dlopen", "use_system_lib"]
